--- a/k4l-video-trimmer/build.gradle
+++ b/k4l-video-trimmer/build.gradle
@@ -6,7 +6,7 @@ android {
     //buildToolsVersion "23.0.3"
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -28,4 +28,6 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:24.0.0'
+
+    implementation 'com.writingminds:FFmpegAndroid:0.3.2'
 }
