--- a/sample-app/build.gradle
+++ b/sample-app/build.gradle
@@ -5,7 +5,7 @@ android {
     // buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "life.knowledge4.videocroppersample"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -37,4 +37,5 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:24.0.0'
+    implementation 'com.writingminds:FFmpegAndroid:0.3.2'
 }
